# Shmashmexa

./: .gitignore  Cargo.toml  README.md  TESTING.md  default.nix  package-lock.json
.direnv/: nix-profile-.809980.e9b7f2ff62b3  nix-profile-.809980.e9b7f2ff62b3.rc
backend/: Cargo.toml
backend/src/: lib.rs  main.rs
backend/src/commands/: mod.rs
backend/src/device/: mod.rs
backend/src/services/internal/: mod.rs  web.rs  websocket.rs
containers/: README.md  commons.sh  testing_start.sh  testing_stop.sh
containers/linux-voice-assistant/: environment_example.env  linux-voice-assistant.container
deploy/: dev.sh
deploy/commons/: 1 move_to_main_repo_dir.sh  2 build_frontend.sh
deploy/containerize/: Containerfile  containerize.sh
deploy/prod/: frontend_update.sh  full_update.sh  push_image_to_prod.sh
deploy/quadlet/: members.sh  nginx.container  shmashmexa.container  shmashmexa.pod
deploy/quadlet/nginx_build/: Containerfile  nginx.build
dev/: tabs.json  unused_tabs.json
frame/: README.md
frame/@Commons/: Constants.scad  RPi5Specs.scad
frame/v1/: Kiosk Frame.scad
frontend/src/components/: icon_button.svelte  main.svelte  single_digit_input.svelte  time.svelte  time_input.svelte  timer_page.svelte
nixos/: .gitignore
nixos/config/: filesystems.nix  flake.nix
nixos/config/imports/: imports.nix
operating_system/config/: README.md  flake.nix
software/backend/: Cargo.toml
software/deploy/: README.md
software/frontend/: tsconfig.json
src/: app.html
src/components/: icon_button.svelte  icon_tab.svelte  main.svelte
(+31 files in other folders)
